<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="392dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/indice_de_masa_corporal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#673AB7"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/peso"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtpeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/en_kilogramos"
            android:inputType="numberDecimal"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/altura"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtaltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/en_metros"
            android:inputType="numberDecimal"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btncalcular"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:onClick="operar"
            android:text="@string/calcular_imc"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/btneliminar"
            style="@style/Widget.AppCompat.Button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:onClick="borrar"
            android:text="@string/eliminar_datos"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        tools:ignore="TextSizeCheck">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Masculino"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                tools:ignore="VisualLintButtonSize" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="443dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtimc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtdescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtideal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/su_peso_ideal"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="303dp"
            android:contentDescription="@string/todos"
            app:srcCompat="@drawable/imc" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recomendaciones"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>